[package]
name = "ble-uart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
btleplug = { version = "0.10", features = ["serde"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
uuid = "1"
stick = "0.13.0"